--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Marketing</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,7 +24,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Markering</h1>
+								<h1>Markerting</h1>
 								<p>Página de prueba diseñada por <a href="https://html5up.net">Andrés Hernandez con HTML5 UP</a> y publicada gratis<br />
 								bajo la <a href="https://html5up.net/license">licencia</a> y <a href="https://github.com/">Github</p>
 							</div>
